conditions: finish section, fix gap property

--- a/src/blocks/conditions/__plate/conditions__plate.css
+++ b/src/blocks/conditions/__plate/conditions__plate.css
@@ -4,5 +4,4 @@
   background-color: var(--primary-background-color);
   border-radius: 16px;
   display: flex;
-  flex-wrap: wrap;
 }
