--- a/src/blocks/conditions/__plates/conditions__plates.css
+++ b/src/blocks/conditions/__plates/conditions__plates.css
@@ -1,6 +1,6 @@
 .conditions__plates {
-  display: flex;
+  display: grid;
+  grid-template-columns: auto auto;
   gap: 26px;
-  flex-wrap: wrap;
   margin-top: 40px;
 }
