--- a/src/blocks/conditions/__subheader/conditions__subheader.css
+++ b/src/blocks/conditions/__subheader/conditions__subheader.css
@@ -1,5 +1,5 @@
 .conditions__subheader {
-  margin: 60px 0 30px 0;
+  margin: 60px 0 40px 0;
   font-style: var(--primary-font-style);
   font-weight: var(--primary-font-weight-500);
   font-size: 32px;
